examples/counter/artifacts/tests/asm_initialize_pda_data_len/result.txt
test tests::test_asm_initialize_pda_data_len ... ok
warning: struct `StackFrameInc` is never constructed
   --> counter/src/constants.rs:103:12
    |
103 |     struct StackFrameInc {
    |            ^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default
warning: variant `Increment` is never constructed
  --> counter/src/tests.rs:40:5
   |
38 | enum Operation {
   |      --------- variant in this enum
39 |     Initialize,
40 |     Increment,
   |     ^^^^^^^^^
warning: `counter` (lib test) generated 2 warnings
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 11 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x3